{
    "name": "UserInput",
    "maps": [
        {
            "name": "StanderdController",
            "id": "c3668ad5-efd3-4713-b747-bf3ef6206970",
            "actions": [
                {
                    "name": "ButtonNorth",
                    "type": "Button",
                    "id": "a8fb8cf4-1a43-40dc-bc3d-b2066cf0753d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ButtonSouth",
                    "type": "Button",
                    "id": "a1cc74c4-e475-43ef-ab93-12f61f431595",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ButtonEast",
                    "type": "Button",
                    "id": "623d9dfc-1477-4399-b608-5d7d3fcef8d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ButtonWest",
                    "type": "Button",
                    "id": "ee3ddc40-36eb-4fa4-94c4-50703beb5317",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftStick",
                    "type": "Value",
                    "id": "5ba48494-28cc-4710-9848-3578529f17d5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightStick",
                    "type": "Value",
                    "id": "2c145315-26ce-4938-bd26-ad42634c72c2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DPad",
                    "type": "Value",
                    "id": "7042ff15-da3c-40f0-aaa5-65329fde0f73",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ZL",
                    "type": "Button",
                    "id": "ced445df-fa24-4987-a30f-e3b291b328cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "L",
                    "type": "Button",
                    "id": "a2647eee-eca5-42c4-b59b-3aae119884c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "R",
                    "type": "Button",
                    "id": "0dd1b119-0669-49bc-b8cf-5f059e62e847",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZR",
                    "type": "Button",
                    "id": "6b7b4697-07ab-4dd5-94cb-6900ba3fe74d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "XBox360_Back",
                    "type": "Button",
                    "id": "f1e1abb3-a583-4964-993e-31744f11c6c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "XBox360_Start",
                    "type": "Button",
                    "id": "aaf5dae1-22b1-45b8-951f-5ccb73deb105",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "XBox360 Home",
                    "type": "Button",
                    "id": "714cf66c-7adb-411d-b9f0-19401ac160ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2fceb492-8263-411c-8c4c-d5ea135e0f59",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox;Controller",
                    "action": "ButtonNorth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4134bd4b-b1dd-4598-9a45-8cb878ca5fd0",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "ButtonNorth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6dcb3f1a-ef2b-46d8-a5c5-f0ca9fd53576",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "ButtonSouth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e513fbbf-0a2b-41c9-bc7d-390203898bfc",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "ButtonSouth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b06d4cc-cadb-43d5-b869-3badd637009b",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "ButtonEast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7836813a-4346-4659-a22b-8e3870c8f99d",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "ButtonEast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d91cd8f9-0b7a-4edc-b1ad-dd60b798f43e",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "ButtonWest",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6abbfd6-2a99-4b8b-a561-e18f346ab0d5",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "ButtonWest",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43d1852f-ca72-43a7-b1a7-74e3d726fba4",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3dbe153d-7c6d-49a9-9e59-ccc988e67e84",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d1a77e9-c22e-41e7-a893-8533ec736e4e",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "864349d9-3640-429b-863b-5fb3ecb6ffe4",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "533bf2bd-99fa-4021-8e9f-9b6cecad5a9f",
                    "path": "<XInputController>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "DPad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39640f95-bc7a-49b9-9e1b-5dca823ffb8c",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "DPad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2baad3b-751a-4aa7-b4df-67891128dad3",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "ZL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e3adbb5-889c-49d4-8eba-f06c81b17109",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "ZL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8d86606-29f5-4a0c-b012-1d4f0543fea2",
                    "path": "<XInputController>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "L",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f45462eb-a0af-4899-9c25-07e16c63a3f8",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "L",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98243742-06fb-4d49-933d-ea6615c3ab53",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "R",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f502584f-bb47-4e96-b069-cecd8673ab27",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "R",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81b0c4bc-3ea9-4c1d-937f-81e58bd12ba7",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "ZR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47986c0f-c2a5-47dc-b707-7c71db31ed63",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "ZR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f5d2fc6-f7e7-4f4e-8ec1-520f8534b12c",
                    "path": "<XInputController>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "XBox360_Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66c61393-a3d0-495a-b3a5-34c4e33825b8",
                    "path": "<XInputController>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "XBox360_Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2bf8acc2-80ba-474e-9e72-39ffdab3df2f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "XBox",
                    "action": "XBox360 Home",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Options",
            "id": "4e53ea01-51e8-4d21-8b34-d236cbff3a1b",
            "actions": [
                {
                    "name": "Shift",
                    "type": "Button",
                    "id": "edd1b348-e0a7-47d8-9e28-10470f7f1504",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "90fd5554-460d-4a32-8cfc-784454834a5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cedf2fe7-f50c-42c4-8c80-e83f4237b33c",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBorad",
                    "action": "Shift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d3aeb0e-57dd-41cb-800d-f90488dc4887",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBorad",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XBox",
            "bindingGroup": "XBox",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "KeyBorad",
            "bindingGroup": "KeyBorad",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}